--- a/.env.example
+++ b/.env.example
@@ -45,3 +45,6 @@ PUSHER_APP_CLUSTER=mt1
 MIX_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
 MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
 FILESYSTEM_DRIVER=
+SCOUT_QUEUE=
+ALGOLIA_APP_ID=
+ALGOLIA_SECRET=
