--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,6 @@
-APP_NAME=Laravel
+APP_NAME="Kaffah News"
 APP_ENV=local
-APP_KEY=
+APP_KEY=base64:eNMXm980QocD7XiEx5vXiMjQ9P8hcRWq5SS/3K27JTQ=
 APP_DEBUG=true
 APP_URL=http://localhost
 
@@ -9,10 +9,12 @@ LOG_CHANNEL=stack
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=laravel
-DB_USERNAME=root
-DB_PASSWORD=
-
+#DB_DATABASE=seputarjateng
+#DB_USERNAME=root
+#DB_PASSWORD=
+DB_DATABASE=u877299734_kaffah
+DB_USERNAME=u877299734_kaffah
+DB_PASSWORD=Admin123.
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
 QUEUE_CONNECTION=sync
@@ -44,7 +46,7 @@ PUSHER_APP_CLUSTER=mt1
 
 MIX_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
 MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
-FILESYSTEM_DRIVER=
-SCOUT_QUEUE=
-ALGOLIA_APP_ID=
-ALGOLIA_SECRET=
+FILESYSTEM_DRIVER=public
+SCOUT_QUEUE=true
+ALGOLIA_APP_ID=ALHB19714I
+ALGOLIA_SECRET=705d7de3c31d7f62fa282f60cd987bf9
